@@ -55,8 +55,8 @@ SERV_SRCS = \
   server/melee1.c server/melee2.c server/save.c server/files.c \
   server/cmd1.c server/cmd2.c server/cmd3.c server/cmd4.c server/cmd5.c \
   server/cmd6.c server/store.c server/birth.c server/load2.c server/randart.c \
-  server/sched.c server/generate.c server/wilderness.c server/dungeon.c \
-  server/init1.c server/init2.c server/netserver.c server/printout.c \
+  server/sched.c server/generate.c server/wild.c server/dungeon.c \
+  server/init1.c server/init2.c server/nserver.c server/printout.c \
   server/main.c
 
 SERV_OBJS = \
@@ -68,45 +68,28 @@ SERV_OBJS = \
   server/melee1.o server/melee2.o server/save.o server/files.o \
   server/cmd1.o server/cmd2.o server/cmd3.o server/cmd4.o server/cmd5.o \
   server/cmd6.o server/store.o server/birth.o server/load2.o server/randart.o \
-  server/sched.o server/generate.o server/wilderness.o server/dungeon.o \
-  server/init1.o server/init2.o server/netserver.o server/printout.o \
+  server/sched.o server/generate.o server/wild.o server/dungeon.o \
+  server/init1.o server/init2.o server/nserver.o server/printout.o \
   server/main.o 
-
 
 CLI_SRCS = \
   common/z-util.c common/z-virt.c common/z-form.c common/z-rand.c \
-  common/net-unix.c common/sockbuf.c common/net-ibm.c \
+  common/net-win.c common/sockbuf.c \
   client/z-term.c client/c-util.c client/c-cmd.c client/c-inven.c \
   client/c-files.c client/c-tables.c client/c-store.c client/c-init.c \
-  client/variable.c client/main-ibm.c client/main-cap.c client/main-gcu.c \
-  client/main-x11.c client/main-xaw.c client/nclient.c client/c-birth.c \
-  client/c-xtra1.c client/c-xtra2.c client/c-spell.c client/client.c
+  client/variable.c client/readdib.c \
+  client/main-win.c client/nclient.c client/c-birth.c \
+  client/c-xtra1.c client/c-xtra2.c client/c-spell.c
 
 CLI_OBJS = \
   common/z-util.o common/z-virt.o common/z-form.o common/z-rand.o \
-  common/net-unix.o common/sockbuf.o common/net-ibm.o \
+  common/net-win.o common/sockbuf.o \
   client/z-term.o client/c-util.o client/c-cmd.o client/c-inven.o \
   client/c-files.o client/c-tables.o client/c-store.o client/c-init.o \
-  client/variable.o client/main-ibm.o client/main-cap.o client/main-gcu.o \
-  client/main-x11.o client/main-xaw.o client/nclient.o client/c-birth.o \
-  client/c-xtra1.o client/c-xtra2.o client/c-spell.o client/client.o
+  client/variable.o client/readdib.o \
+  client/main-win.o client/nclient.o client/c-birth.o \
+  client/c-xtra1.o client/c-xtra2.o client/c-spell.o
 
-
-CONS_SRCS = \
-  common/z-util.c common/z-virt.c common/z-form.c common/net-unix.c \
-  common/sockbuf.c common/net-ibm.c \
-  client/z-term.c \
-  client/main-ibm.c client/main-cap.c client/main-gcu.c \
-  client/main-x11.c client/main-xaw.c \
-  console/variable.c console/c-util.c console/console.c console/c-init.c
-
-CONS_OBJS = \
-  common/z-util.o common/z-virt.o common/z-form.o common/net-unix.o \
-  common/sockbuf.o common/net-ibm.o \
-  client/z-term.o \
-  client/main-ibm.o client/main-cap.o client/main-gcu.o \
-  client/main-x11.o client/main-xaw.o \
-  console/variable.o console/c-util.o console/console.o console/c-init.o
 
 
 ##
@@ -134,7 +117,7 @@ CONS_OBJS = \
 #
 # This is my compiler of choice, it seems to work most everywhere
 #
-CC = gcc
+CC = c:\code\cygnus\h-i586~1\bin\gcc
 
 
 #
@@ -155,117 +138,13 @@ CC = gcc
 # including "USE_GETCH" and "USE_CURS_SET".  Note that "config.h" will
 # attempt to "guess" at many of these flags based on your system.
 #
-CFLAGS = -Wall -g -pipe -D"USE_X11" -D"USE_GCU"
-LIBS = -L/usr/X11R6/lib -lX11 -lcurses
+CFLAGS = -Wall -O2 -D"USE_WIN" -DWIN32 -D"USE_GRAPHICS"
+LIBS = -luser32 -lwsock32 -lgdi32 -lcomdlg32
+
+SCFLAGS = -Wall -O2 -D"USE_WIN"
+SLIBS = -luser32 -lwsock32
 
 
-##
-## Variation -- Only support "main-x11.c" (not "main-gcu.c")
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11"
-#LIBS = -lX11
-
-
-##
-## Variation -- Only support "main-gcu.c" (not "main-x11.c")
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_GCU"
-#LIBS = -lcurses -ltermcap
-
-
-## Added by thaler, 6/28/97
-## Variation -- Only support "main-gcu.c" (not "main-x11.c") on localhost
-##
-## NOTE -- Using this variation requires that the server and client run
-## on the same machine!  Also define META_ADDRESS to be an empty string
-## in config.h.  --Keldon
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_GCU" -DUNIX_SOCKETS
-#LIBS = -lncurses -ltermcap
-
-
-##
-## Variation -- Use "main-xaw.c" instead of "main-x11.c"
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_XAW" -D"USE_GCU"
-#LIBS = -lXaw -lXmu -lXt -lX11 -lcurses -ltermcap
-
-
-##
-## Variation -- Use "main-cap.c" instead of "main-gcu.c"
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_CAP"
-#LIBS = -lX11 -ltermcap
-
-
-##
-## Variation -- Only work on simple vt100 terminals
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_CAP" -D"USE_HARDCODE"
-
-
-##
-## Variation -- this might work for Linux 1.1.93 using ncurses-1.8.7.
-##
-#CFLAGS = -I/usr/X11R6/include -I/usr/include/ncurses \
-#         -Wall -O2 -fomit-frame-pointer -m486 \
-#         -D"USE_X11" -D"USE_GCU"
-#LIBS = -L/usr/X11R6/lib -lX11 -lncurses -ltermcap
-
-##
-## Variation -- this might work better than the suggestion above
-##
-#CFLAGS = -I/usr/include/ncurses \
-#         -Wall -O2 -fomit-frame-pointer \
-#         -D"USE_X11" -D"USE_GCU" \
-#         -D"USE_TPOSIX" -D"USE_CURS_SET"
-#LIBS = -lX11 -lncurses
-#LDFLAGS = -s
-
-
-##
-## Variation -- compile for Solaris
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"SOLARIS" -I/usr/openwin/include
-#LIBS = -L/usr/openwin/lib -R/usr/openwin/lib -lX11 -lsocket -lnsl -lcurses
-
-
-##
-## Variation -- compile for SGI Indigo runnig Irix
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"SGI"
-#LIBS = -lX11 -lcurses -ltermcap -lsun
-
-
-
-##
-## Variation -- compile for Dec ALPHA OSF/1 v2.0
-##
-#CC     = cc
-##CFLAGS = -std -O -g3 -Olimit 4000 -D"USE_X11" -D"USE_GCU"
-#CFLAGS = -std -g -D"USE_X11" -D"USE_GCU"
-#LIBS   = -lX11 -lcurses -ltermcap -lrpcsvc
-
-
-##
-## Variation -- compile for Interactive Unix (ISC) systems
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_X11" -D"USE_GCU" -D"ISC"
-#LIBS = -lX11 -lcurses -lnsl_s -linet -lcposix
-
-
-##
-## Variation -- Support fat binaries under NEXTSTEP
-##
-#CFLAGS = -Wall -O1 -pipe -g -D"USE_GCU" -arch m68k -arch i386
-#LIBS = -lcurses -ltermcap
-
-
-##
-## Variation -- Support for DJGPP with TCPLIB
-##
-#CFLAGS = -Wall -O2 -g -D"USE_IBM" -DMSDOS
-#LIBS = -ltcp
 
 
 #
@@ -275,22 +154,8 @@ LIBS = -L/usr/X11R6/lib -lX11 -lcurses
 # below.
 #
 
-install: mangclient mangconsole mangband
-	-mv ../mangclient ../mangclient.old
-	-mv ../mangband ../mangband.old
-	-mv ../mangconsole ../mangconsole.old
-	cp mangclient ..
-	cp mangconsole ..
-	cp mangband ..
+install: mangclient mangband
 
-
-
-#
-# Build the "MAngband" server
-#
-
-mangband: $(SERV_OBJS)
-	$(CC) $(CFLAGS) -o mangband $(SERV_OBJS) $(LDFLAGS) $(LIBS)
 
 
 #
@@ -302,11 +167,18 @@ mangclient: $(CLI_OBJS)
 
 
 #
+# Build the "MAngband" server
+#
+
+mangband: $(SERV_OBJS)
+	$(CC) $(SCFLAGS) -o ../mangband server/*.o common/*.o $(LDFLAGS) $(SLIBS)	
+#        $(CC) $(CFLAGS) -o mangband $(SERV_OBJS) $(LDFLAGS) $(LIBS)
+
+
+#
 # Build the "MAngband" remote console
 #
 
-mangconsole: $(CONS_OBJS)
-	$(CC) $(CFLAGS) -o mangconsole $(CONS_OBJS) $(LDFLAGS) $(LIBS)
 
 
 #
@@ -321,10 +193,8 @@ mangconsole: $(CONS_OBJS)
 #
 
 clean:
-	cd server; rm -f *.o
 	cd client; rm -f *.o
 	cd common; rm -f *.o
-	cd console; rm -f *.o
 
 
 
@@ -332,8 +202,8 @@ clean:
 # Generate dependancies automatically
 #
 
-depend:
-	makedepend -- $(CFLAGS) -D__MAKEDEPEND__ -- $(SERV_SRCS) $(CLI_SRCS)
+#depend:
+#        makedepend -- $(CFLAGS) -D__MAKEDEPEND__ -- $(SERV_SRCS) $(CLI_SRCS)
 
 
 # DO NOT ADD ANYTHING BELOW THIS LINE.
